# CASE-Implementation-GNU-Time

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml  prerelease.yml  supply-chain.yml
case_gnu_time/: __init__.py  local_uuid.py
dependencies/: install_dependent_packages-freebsd-12.sh  install_dependent_packages-ubuntu-20.04.sh
tests/: Makefile  requirements.txt
tests/as_import/: Makefile  consumer.py  process.json  process.ttl  test_as_import.py
tests/dependencies/: install_dependent_packages-freebsd-12.sh  install_dependent_packages-freebsd-13.sh
tests/from_pip/: Makefile  process.json  process.ttl  test_from_pip.py
tests/gtime_and_done_log/: Makefile  process.json  process.ttl  test_gtime_and_done_log.py
tests/gtime_log/: Makefile  process.json  process.ttl  test_gtime_log.py
tests/src/: compact.py
