[metadata]
name = case_gnu_time
version = attr: case_gnu_time.__version__
author = Alex Nelson
author_email = alexander.nelson@nist.gov
description = A mapping of GNU Time to CASE
license_files = LICENSE
#TODO - PyPI will need a differently-written README.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Implementation-GNU-Time
classifiers =
    Development Status :: 4 - Beta
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
install_requires =
    case_utils >= 0.9.0, < 0.10.0
    python-dateutil
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    case_gnu_time = case_gnu_time:main

[options.package_data]
case_gnu_time = py.typed
